# Online-Tournament

./: README.md  alembic.ini  config.py
alembic/: env.py
alembic/versions/: 2024_06_08_1159-51d38b1b6cc1_add_column_dota2_id_in_table_gamers.py  48d2fee40854_swap_type_int_on_str_table_gamers_.py  b226ec680736_create_all_tables.py  ec9eb9cc62df_add_type_column_for_table_tournaments.py
requriments/: pyproject.toml
src/: main.py
src/auth/: auth_view.py  register_view.py  schemas.py  utils_jwt.py
src/crud/: crud.py
src/database/: models.py  schemasDTO.py  session.py
src/dota2_api/: __init__.py  gamers.py  schemas.py  tournaments.py
src/gamers_view/: schemas.py  views.py
src/squads_view/: schemas.py  views.py
src/tournament_view/: fastapi_view.py  schemas.py  views.py
src/tournamet_view/: schemas.py
