[tool.poetry]
name = "requriments"
version = "0.1.0"
description = ""
authors = ["abrigo132 <garipotter97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
black = "^24.4.2"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
bcrypt = "^4.1.3"
python-multipart = "^0.0.9"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
